# jarvis-ocr-service

./: .coveragerc  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  WIP.md  com.jarvis.ocr.service.plist  com.jarvis.ocr.worker.plist  deploy-launchd.sh  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  env.template  fix-poetry.sh  main.py  pyproject.toml  requirements.txt  run-prod.sh  run-worker.sh  run.sh  setup-launchd.sh  test_ocr.py  test_results.json  worker.py
.github/workflows/: docker-build-push.yml  test.yml
alembic/: env.py
alembic/versions/: 001_create_settings_table.py  (+1 more)
app/: __init__.py  auth.py  auth_cache.py  auth_client.py  config.py  continue_processing.py  exceptions.py  image_resolver.py  llm_queue_client.py  main.py  models.py  provider_manager.py  queue_client.py  queue_schemas.py  service_config.py  text_utils.py  tier_mapping.py  utils.py  validation_callback.py  validation_state.py
prds/: auth.md  initial-setup.md  queue-flow.md
tests/: __init__.py  conftest.py  test_async_flow_integration.py  test_auth.py  test_config_extended.py  test_continue_processing.py  test_endpoints.py  test_image_resolver.py  test_llm_proxy_provider.py  test_llm_queue_client.py  test_provider_manager.py  test_provider_manager_extended.py  test_providers_misc.py  test_queue_client.py  test_queue_schemas.py  test_service_config.py  test_settings.py  test_text_utils.py  test_tier_mapping.py  test_utils.py  test_validation_callback.py  test_validation_state.py  test_worker.py  test_worker_extended.py
(+16 files in other folders)
